2002-09-17  Jonathan Hunt  <jhuntnz@users.sf.net>
	* config.sub: Added. Was lost en-route to Sf.
	* config.guess: Added. Was lost en-route to Sf.
	* input.conf: Change hep-at and hen-em to hep_at
	   and hen_em so it works under C.
	* hen?em: Renamed
	* hep?at: Renamed

2001-10-16  Jonathan Hunt  <jhuntnz@users.sf.net>
	* lex.l: Added - as a valid character.
	* makedump.c: Removed use of sizeof(flash_buffer)
	  and replaced with SIZE_OF_FLASH.
	* program.c: Likewise.
	
2001-09-26  Jonathan Hunt  <jhuntnz@users.sf.net>
	* loaddump.c: Made playing sounds faster.
	* main.c: Likewise.
	* playitem.c: Likewise.
	* makedump.c: Likewise
	
2001-09-25  Jonathan Hunt  <jhuntnz@users.sf.net>
	* main.h: Added the ability to play sounds with hbit going to
	  stdout as well. Used by the master.
	* loaddump.c: Likewise.
	* playitem.c: Likewise.
	
2001-09-25  Jonathan Hunt  <jhuntnz@users.sf.net>
	* program.c: Changed timing to make it slower. It was having
	  errors. Now programs with no failures.
	  
2001-09-23  Jonathan Hunt  <jhuntnz@users.sf.net>
	* program.c: Got it working with new master. Changed timing
	  to make it faster.
	* parse.c: Added rabbit junk at beginning out outputed files.
	
2001-09-15  Jonathan Hunt  <jhuntnz@users.sf.net>
	* input.conf: Changed ! to _ and @ to P so that it makes
	  C parsable defines.
	* main.h: Added -P option to make it just parse the input file
	  and generate headers and C but not access sound files.
	* parse.*: Added new property construct. Added prop_inclusivetable.
	* yacc.y: Likewise
	* lex.l: Likewise
	
2001-09-13  Jonathan Hunt  <jhuntnz@users.sf.net>
	* makedump.c: Converted to output Rabbit compatible
	  header files.
	* parse.c: Likewise
	
2001-08-14  Jonathan Hunt  <jhuntnz@users.sourceforge.net>
	* Added lex.l, yacc.y, parse.*
	* Input.conf is now a lot more complicated than before.
	  Generates language tables too.	  
	  
2001-08-08  Jonathan Hunt  <jhuntnz@users.sourceforge.net>
	* bugfix: Checking problem.
	